# wakaama

./: .codecov.yml  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md
.travis/: install_jwt.sh  install_ulfius.sh
client/: client.js  package.json  service-callback.js  service.js
core/: internals.h  json.c  liblwm2m.h  management.c  observe.c  registration.c
core/er-coap-13/: er-coap-13.c
examples/rest-server/: CMakeLists.txt  LICENSE  README.md  RESTAPI.md  http_codes.h  logging.c  logging.h  rest-authentication.c  rest-authentication.h  rest-core-types.c  rest-core-types.h  rest-core.c  rest-endpoints.c  rest-list.c  rest-list.h  rest-notifications.c  rest-resources.c  rest-ssdp.c  rest-ssdp.h  rest-subscriptions.c  rest-utils.c  rest-utils.h  restserver.c  restserver.h  security.c  security.h  settings.c  settings.h  version.h.in
examples/shared/: connection.c  dtlsconnection.c  mbedtlsconnection.c  mbedtlsconnection.h  mbedtlsfunctions.c  shared.cmake
script/: bootstrap  cibuild  format_style.sh  server  setup  test  update
scripts/: build.sh  format_style.sh  test.sh
tests-rest/: client-if.js  endpoints.spec.js  notifications.spec.js  package.json  resources.spec.js  secure.cfg  security.spec.js  subscriptions.spec.js
